<!-- dialog_change_password.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eightCharactersOrMore"
        android:textColor="@color/purpleText"/>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upperCaseAndLowerCase"
        android:textColor="@color/purpleText"/>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numbersAndSpecialCharacters"
        android:textColor="@color/purpleText"/>
    <TextView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noPatterns"
        android:textColor="@color/purpleText"/>

    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Current Password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Password"
        android:inputType="textPassword"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm New Password"
        android:inputType="textPassword"
        android:minHeight="48dp"/>

</LinearLayout>
