<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/app_name"
        android:elevation="4pt"
        app:tint="#bc6ee8"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewTopRectangle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#6EE8BC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopRectangle" />


    <ImageButton
        android:id="@+id/btnChangePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/editprofilepicture"
        android:tint="@color/quantum_white_100"
        app:layout_constraintBottom_toBottomOf="@id/imgProfilePicture"
        app:layout_constraintEnd_toEndOf="@id/imgProfilePicture"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/purpleText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/imgProfilePicture"
        app:layout_constraintStart_toStartOf="@id/imgProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePicture"
        tools:text="User Name" />


    <RelativeLayout
        android:id="@+id/roundedContainerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_container"
        android:padding="11dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName">

        <!-- Email Label -->
        <TextView
            android:id="@+id/textEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="3dp" />

        <!-- User's Email -->
        <TextView
            android:id="@+id/textUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/textEmailLabel"/>

        <!-- Edit Email Button -->
        <ImageButton
            android:id="@+id/buttonEditEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textUserEmail"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/edit"
            app:tint="@color/quantum_white_100" />
    </RelativeLayout>

    <TextView
        app:layout_constraintBottom_toTopOf="@id/LogOut"
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:text="@string/changePassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:text="@string/logout"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/purpleText"/>



    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6EE8BC"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/imgExplore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/explore_world_by_map" />

            <ImageView
                android:id="@+id/imgSearchLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/search_by_location" />

            <ImageView
                android:id="@+id/imgMainPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/imgScanQR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/scan"
                app:tint="@color/quantum_white_100"/>

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/profile" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgCurrentPageLine"
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:elevation="16pt"
            app:srcCompat="@drawable/current_page_menu_line"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>